test(InMemoryTaskManager): добавление новых тестов